# frontend-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  chain.sh  clippy.toml  clippy_compared_list.md  deploy_local.sh  ideas.md  run.sh  rust_lints_compared_list.md  rustfmt.toml  wrangler.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/checks/: allowed-lint-exceptions.yaml  check-file-lengths.sh  check-folder-sizes.sh  check-lint-config.sh  check-lint-exceptions.sh  clippy_compare.py  clippy_lints_list.md  lint-config.chain  protected-files.yaml  rust_lints_compare.py  rust_lints_list.md
.github/workflows/: code_length.yml  codeql.yml  pages.yml  pr-cleanup.yml  release.yml  rust.yml
crates/cp-base/: Cargo.toml
crates/cp-base/src/: cast.rs  lib.rs  modules.rs  panels.rs
crates/cp-base/src/config/: accessors.rs  constants.rs  global.rs  llm_types.rs  mod.rs
crates/cp-base/src/state/: actions.rs  autocomplete.rs  context.rs  flags.rs  mod.rs  runtime.rs  watchers.rs
crates/cp-base/src/state/data/: config.rs  message.rs  mod.rs
crates/cp-base/src/tools/: mod.rs  pre_flight.rs
crates/cp-base/src/ui/: mod.rs  question_form.rs  render_cache.rs
crates/cp-console-server/: Cargo.toml
crates/cp-console-server/src/: main.rs  protocol.rs
crates/cp-mod-brave/: Cargo.toml
crates/cp-mod-brave/src/: api.rs  lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-callback/: Cargo.toml
crates/cp-mod-callback/src/: firing.rs  lib.rs  panel.rs  tools.rs  tools_upsert.rs  trigger.rs  types.rs
crates/cp-mod-chat/: Cargo.toml
crates/cp-mod-chat/src/: bootstrap.rs  lib.rs  server.rs  types.rs
crates/cp-mod-chat/src/bridges/: lifecycle.rs  login.rs  mod.rs
crates/cp-mod-chat/src/client/: account.rs  bridge_detect.rs  download.rs  mod.rs  rooms.rs  send.rs  sync.rs
crates/cp-mod-chat/src/panels/: dashboard.rs  mod.rs  room.rs
crates/cp-mod-chat/src/tools/: helpers.rs  mod.rs  secondary.rs
crates/cp-mod-console/: Cargo.toml
crates/cp-mod-console/src/: lib.rs  manager.rs  panel.rs  pollers.rs  ring_buffer.rs  tools.rs  types.rs
crates/cp-mod-files/: Cargo.toml
crates/cp-mod-files/src/: lib.rs  panel.rs
crates/cp-mod-firecrawl/: Cargo.toml
crates/cp-mod-firecrawl/src/: api.rs  lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-git/: Cargo.toml
crates/cp-mod-git/src/: cache_invalidation.rs  classify.rs  lib.rs  result_panel.rs  tools.rs  types.rs
crates/cp-mod-github/: Cargo.toml
crates/cp-mod-github/src/: cache_invalidation.rs  lib.rs  panel.rs  parse.rs  tools.rs  types.rs  watcher.rs
crates/cp-mod-github/src/classify/: mod.rs
crates/cp-mod-logs/: Cargo.toml
crates/cp-mod-logs/src/: lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-memory/: Cargo.toml
crates/cp-mod-memory/src/: lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-preset/: Cargo.toml
crates/cp-mod-preset/src/: builtin.rs  lib.rs  tools.rs  types.rs
crates/cp-mod-prompt/: Cargo.toml
crates/cp-mod-prompt/src/: lib.rs  library_blocks.rs  library_panel.rs  seed.rs  skill_panel.rs  storage.rs  types.rs
crates/cp-mod-prompt/src/tools/: agent.rs  command.rs  edit_prompt.rs  library_editor.rs  mod.rs  skill.rs
crates/cp-mod-queue/: Cargo.toml
crates/cp-mod-queue/src/: lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-scratchpad/: Cargo.toml
crates/cp-mod-scratchpad/src/: lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-spine/: Cargo.toml
crates/cp-mod-spine/src/: coucou.rs  engine.rs  guard_rail.rs  lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-todo/: Cargo.toml
crates/cp-mod-todo/src/: lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-tree/: Cargo.toml
crates/cp-mod-tree/src/: lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-typst/: Cargo.toml
crates/cp-mod-typst/src/: cli_parser.rs  compiler.rs  lib.rs  packages.rs  templates.rs  tools_execute.rs  watchlist.rs
crates/cp-render/: Cargo.toml
crates/cp-render/src/: conversation.rs  frame.rs  lib.rs
docs/: ROADMAP.md  architecture.md  callbacks.md  console-server.md  custom-visualization.md  design-matrix-module.md  intermediate-rendering.md  logs.md  notifications.md  pdf-module.md  prompt-building.md  question-tool.md  streaming-errors.md  web_module_design.md
docs/to-sort/: GSM.md  claude_code_api_doc.md  ideas.md  workers.md
docs/to-sort/report/: 01-panel-summary.md  02-bugs.md  03-design-observations.md  04-recommendations.md  code-audit.md
src/: main.rs  typst_cli.rs
src/app/: events.rs  mod.rs  panels.rs  prompt_builder.rs
src/app/actions/: config.rs  cursor.rs  helpers.rs  input.rs  mod.rs  streaming.rs
src/app/context/: detach.rs  mod.rs
src/app/reverie/: mod.rs  streaming.rs  tools.rs  trigger.rs
src/app/run/: input.rs  lifecycle.rs  mod.rs  reverie.rs  streaming.rs  watchers.rs
src/infra/: api.rs  config.rs  constants.rs  gh_watcher.rs  mod.rs  profiler.rs  tools.rs  watcher.rs
src/llms/: mod.rs  openai_compat.rs  openai_streaming.rs
src/llms/anthropic/: messages.rs  mod.rs
src/llms/claude_code/: check.rs  check_api.rs  message_format.rs  mod.rs  stream.rs  stream_types.rs
src/llms/claude_code_api_key/: helpers.rs  mod.rs  streaming.rs
src/llms/minimax/: mod.rs
src/modules/: mod.rs  pre_flight.rs
src/state/: cache.rs  mod.rs
src/ui/: helpers.rs  input.rs  markdown.rs  mod.rs
tmp/: crew.txt  ship_log.txt  treasure.txt
website/: index.html  script.js  style.css
website/docs/: advanced.html  agents.html  configuration.html  context.html  docs.css  getting-started.html  index.html  keyboard.html  modules.html  tools.html
yamls/: injections.yaml  library.yaml  presets.yaml  prompts.yaml  reverie.yaml  themes.yaml  ui.yaml
yamls/tools/: brave.yaml  callback.yaml  chat.yaml  console.yaml  core.yaml  files.yaml  firecrawl.yaml  git.yaml  github.yaml  logs.yaml  memory.yaml  preset.yaml  prompt.yaml  questions.yaml  queue.yaml  reverie.yaml  scratchpad.yaml  spine.yaml  todo.yaml  tree.yaml  typst.yaml
(+57 files in other folders)
