[workspace]
members = [".", "crates/cp-base", "crates/cp-console-server", "crates/cp-render", "crates/cp-mod-callback", "crates/cp-mod-chat", "crates/cp-mod-console", "crates/cp-mod-files", "crates/cp-mod-git", "crates/cp-mod-github", "crates/cp-mod-logs", "crates/cp-mod-memory", "crates/cp-mod-queue", "crates/cp-mod-scratchpad", "crates/cp-mod-spine", "crates/cp-mod-todo", "crates/cp-mod-tree", "crates/cp-mod-prompt", "crates/cp-mod-preset", "crates/cp-mod-typst", "crates/cp-mod-brave", "crates/cp-mod-firecrawl"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Context Pilot — AI coding assistant TUI"
repository = "https://github.com/gdraznieks/context-pilot"
keywords = ["ai", "tui", "coding-assistant"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[workspace.dependencies]
cp-base = { path = "crates/cp-base" }
cp-render = { path = "crates/cp-render" }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = "0.4"
regex = "1.10"
ignore = "0.4"
globset = "0.4"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[workspace.lints.rust]
aarch64_softfloat_neon = "forbid"
absolute_paths_not_starting_with_crate = "forbid"
ambiguous_associated_items = "forbid"
ambiguous_glob_imports = "forbid"
ambiguous_glob_reexports = "forbid"
ambiguous_negative_literals = "forbid"
ambiguous_wide_pointer_comparisons = "forbid"
anonymous_parameters = "forbid"
arithmetic_overflow = "forbid"
array_into_iter = "forbid"
asm_sub_register = "forbid"
async_fn_in_trait = "forbid"
bad_asm_style = "forbid"
bare_trait_objects = "forbid"
binary_asm_labels = "forbid"
bindings_with_variant_name = "deny"
boxed_slice_into_iter = "forbid"
break_with_label_and_loop = "forbid"
clashing_extern_declarations = "forbid"
closure_returning_async_block = "forbid"
coherence_leak_check = "forbid"
conflicting_repr_hints = "forbid"
confusable_idents = "forbid"
const_evaluatable_unchecked = "forbid"
const_item_interior_mutations = "forbid"
const_item_mutation = "forbid"
dangerous_implicit_autorefs = "forbid"
dangling_pointers_from_locals = "forbid"
dangling_pointers_from_temporaries = "forbid"
dead_code = "deny"
dependency_on_unit_never_type_fallback = "forbid"
deprecated = "forbid"
deprecated_safe_2024 = "forbid"
deprecated_where_clause_location = "forbid"
deref_into_dyn_supertrait = "forbid"
deref_nullptr = "forbid"
double_negations = "forbid"
drop_bounds = "forbid"
dropping_copy_types = "forbid"
dropping_references = "forbid"
duplicate_macro_attributes = "forbid"
dyn_drop = "forbid"
edition_2024_expr_fragment_specifier = "forbid"
elided_lifetimes_in_associated_constant = "forbid"
elided_lifetimes_in_paths = "forbid"
ellipsis_inclusive_range_patterns = "forbid"
enum_intrinsics_non_enums = "forbid"
explicit_builtin_cfgs_in_flags = "forbid"
explicit_outlives_requirements = "forbid"
exported_private_dependencies = "forbid"
for_loops_over_fallibles = "forbid"
forbidden_lint_groups = "forbid"
forgetting_copy_types = "forbid"
forgetting_references = "forbid"
function_casts_as_integer = "forbid"
function_item_references = "forbid"
hidden_glob_reexports = "forbid"
if_let_rescope = "forbid"
ill_formed_attribute_input = "forbid"
impl_trait_overcaptures = "forbid"
impl_trait_redundant_captures = "forbid"
improper_ctypes = "forbid"
improper_ctypes_definitions = "forbid"
incomplete_features = "forbid"
incomplete_include = "forbid"
ineffective_unstable_trait_impl = "forbid"
inline_no_sanitize = "forbid"
integer_to_ptr_transmutes = "forbid"
internal_features = "forbid"
invalid_atomic_ordering = "forbid"
invalid_doc_attributes = "forbid"
invalid_from_utf8 = "forbid"
invalid_from_utf8_unchecked = "forbid"
invalid_macro_export_arguments = "forbid"
invalid_nan_comparisons = "forbid"
invalid_null_arguments = "forbid"
invalid_reference_casting = "forbid"
invalid_type_param_default = "forbid"
invalid_value = "forbid"
irrefutable_let_patterns = "forbid"
keyword_idents_2024 = "forbid"
large_assignments = "forbid"
late_bound_lifetime_arguments = "forbid"
legacy_derive_helpers = "forbid"
let_underscore_drop = "forbid"
let_underscore_lock = "forbid"
long_running_const_eval = "forbid"
macro_expanded_macro_exports_accessed_by_absolute_paths = "forbid"
macro_use_extern_crate = "forbid"
malformed_diagnostic_attributes = "forbid"
malformed_diagnostic_format_literals = "forbid"
map_unit_fn = "forbid"
meta_variable_misuse = "forbid"
mismatched_lifetime_syntaxes = "forbid"
misplaced_diagnostic_attributes = "forbid"
missing_abi = "forbid"
missing_copy_implementations = "forbid"
missing_debug_implementations = "forbid"
missing_docs = "forbid"
missing_unsafe_on_extern = "forbid"
mixed_script_confusables = "forbid"
mutable_transmutes = "forbid"
named_arguments_used_positionally = "forbid"
named_asm_labels = "forbid"
never_type_fallback_flowing_into_unsafe = "forbid"
no_mangle_const_items = "forbid"
no_mangle_generic_items = "forbid"
non_ascii_idents = "forbid"
non_camel_case_types = "deny"
non_contiguous_range_endpoints = "forbid"
non_fmt_panics = "forbid"
non_local_definitions = "forbid"
non_shorthand_field_patterns = "forbid"
non_snake_case = "forbid"
non_upper_case_globals = "deny"
noop_method_call = "forbid"
opaque_hidden_inferred_bound = "forbid"
out_of_scope_macro_calls = "forbid"
overflowing_literals = "forbid"
overlapping_range_endpoints = "forbid"
path_statements = "forbid"
patterns_in_fns_without_body = "forbid"
private_bounds = "forbid"
private_interfaces = "forbid"
proc_macro_derive_resolution_fallback = "forbid"
ptr_to_integer_transmute_in_consts = "forbid"
pub_use_of_private_extern_crate = "forbid"
redundant_imports = "forbid"
redundant_lifetimes = "forbid"
redundant_semicolons = "forbid"
refining_impl_trait_internal = "forbid"
refining_impl_trait_reachable = "forbid"
renamed_and_removed_lints = "forbid"
repr_c_enums_larger_than_int = "forbid"
repr_transparent_non_zst_fields = "forbid"
rtsan_nonblocking_async = "forbid"
rust_2024_guarded_string_incompatible_syntax = "forbid"
rust_2024_incompatible_pat = "forbid"
rust_2024_prelude_collisions = "forbid"
self_constructor_from_outer_item = "forbid"
semicolon_in_expressions_from_macros = "forbid"
single_use_lifetimes = "forbid"
soft_unstable = "forbid"
special_module_name = "forbid"
stable_features = "forbid"
static_mut_refs = "forbid"
suspicious_double_ref_op = "forbid"
tail_expr_drop_order = "forbid"
text_direction_codepoint_in_comment = "forbid"
text_direction_codepoint_in_literal = "forbid"
trivial_bounds = "forbid"
trivial_casts = "forbid"
trivial_numeric_casts = "forbid"
type_alias_bounds = "forbid"
tyvar_behind_raw_pointer = "forbid"
uncommon_codepoints = "forbid"
unconditional_panic = "forbid"
unconditional_recursion = "forbid"
uncovered_param_in_projection = "forbid"
undropped_manually_drops = "forbid"
unexpected_cfgs = "forbid"
unfulfilled_lint_expectations = "forbid"
ungated_async_fn_track_caller = "forbid"
uninhabited_static = "forbid"
unit_bindings = "forbid"
unknown_crate_types = "forbid"
unknown_diagnostic_attributes = "forbid"
unknown_lints = "forbid"
unnameable_test_items = "forbid"
unnameable_types = "forbid"
unnecessary_transmutes = "forbid"
unpredictable_function_pointer_comparisons = "forbid"
unreachable_code = "deny"
unreachable_patterns = "forbid"
unreachable_pub = "forbid"
unsafe_attr_outside_unsafe = "forbid"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unstable_name_collisions = "forbid"
unstable_syntax_pre_expansion = "forbid"
unsupported_calling_conventions = "forbid"
unused_allocation = "forbid"
unused_assignments = "forbid"
unused_associated_type_bounds = "forbid"
unused_attributes = "deny"
unused_braces = "forbid"
unused_comparisons = "forbid"
unused_crate_dependencies = "forbid"
unused_doc_comments = "forbid"
unused_extern_crates = "deny"
unused_features = "forbid"
unused_import_braces = "forbid"
unused_imports = "forbid"
unused_labels = "forbid"
unused_lifetimes = "forbid"
unused_macro_rules = "forbid"
unused_macros = "forbid"
unused_must_use = "forbid"
unused_mut = "deny"
unused_parens = "forbid"
unused_qualifications = "deny"
unused_results = "forbid"
unused_unsafe = "forbid"
unused_variables = "deny"
useless_deprecated = "forbid"
useless_ptr_null_checks = "forbid"
uses_power_alignment = "forbid"
varargs_without_pattern = "forbid"
variant_size_differences = "forbid"
warnings = "forbid"
while_true = "forbid"

[workspace.lints.clippy]
absurd_extreme_comparisons = "forbid"
allow_attributes = "forbid"
allow_attributes_without_reason = "forbid"
almost_complete_range = "forbid"
almost_swapped = "forbid"
approx_constant = "forbid"
arc_with_non_send_sync = "forbid"
arithmetic_side_effects = "deny"
as_pointer_underscore = "forbid"
as_ptr_cast_mut = "forbid"
as_underscore = "forbid"
assertions_on_constants = "forbid"
assertions_on_result_states = "forbid"
assign_op_pattern = "forbid"
assigning_clones = "forbid"
async_yields_async = "forbid"
await_holding_invalid_type = "forbid"
await_holding_lock = "forbid"
await_holding_refcell_ref = "forbid"
bad_bit_mask = "forbid"
bind_instead_of_map = "forbid"
blanket_clippy_restriction_lints = "forbid"
blocks_in_conditions = "forbid"
bool_assert_comparison = "forbid"
bool_comparison = "forbid"
bool_to_int_with_if = "forbid"
borrow_as_ptr = "forbid"
borrow_deref_ref = "forbid"
borrow_interior_mutable_const = "forbid"
borrowed_box = "forbid"
box_collection = "forbid"
box_default = "forbid"
boxed_local = "forbid"
branches_sharing_code = "forbid"
builtin_type_shadow = "forbid"
byte_char_slices = "forbid"
bytes_count_to_len = "forbid"
bytes_nth = "forbid"
cargo_common_metadata = "forbid"
case_sensitive_file_extension_comparisons = "forbid"
cast_abs_to_unsigned = "forbid"
cast_enum_constructor = "forbid"
cast_enum_truncation = "forbid"
cast_lossless = "forbid"
cast_nan_to_int = "forbid"
cast_possible_truncation = "deny"
cast_possible_wrap = "forbid"
cast_precision_loss = "deny"
cast_ptr_alignment = "forbid"
cast_sign_loss = "deny"
cast_slice_different_sizes = "forbid"
cast_slice_from_raw_parts = "forbid"
cfg_not_test = "forbid"
char_indices_as_byte_indices = "forbid"
chars_last_cmp = "forbid"
chars_next_cmp = "forbid"
checked_conversions = "forbid"
clear_with_drain = "forbid"
clone_on_copy = "forbid"
clone_on_ref_ptr = "forbid"
cloned_instead_of_copied = "forbid"
cloned_ref_to_slice_refs = "forbid"
cmp_null = "forbid"
cmp_owned = "forbid"
coerce_container_to_any = "forbid"
collapsible_else_if = "forbid"
collapsible_if = "forbid"
collapsible_match = "forbid"
collapsible_str_replace = "forbid"
collection_is_never_read = "forbid"
comparison_chain = "forbid"
comparison_to_empty = "forbid"
confusing_method_to_numeric_cast = "forbid"
const_is_empty = "forbid"
copy_iterator = "forbid"
crate_in_macro_def = "forbid"
create_dir = "forbid"
crosspointer_transmute = "forbid"
dbg_macro = "forbid"
debug_assert_with_mut_call = "forbid"
decimal_literal_representation = "forbid"
declare_interior_mutable_const = "forbid"
default_constructed_unit_structs = "forbid"
default_instead_of_iter_empty = "forbid"
default_trait_access = "forbid"
default_union_representation = "forbid"
deprecated_cfg_attr = "forbid"
deprecated_clippy_cfg_attr = "forbid"
deprecated_semver = "forbid"
deref_addrof = "forbid"
deref_by_slicing = "forbid"
derivable_impls = "forbid"
derive_ord_xor_partial_ord = "forbid"
derive_partial_eq_without_eq = "forbid"
derived_hash_with_manual_eq = "forbid"
disallowed_macros = "forbid"
disallowed_methods = "forbid"
disallowed_names = "forbid"
disallowed_types = "forbid"
diverging_sub_expression = "forbid"
doc_broken_link = "forbid"
doc_comment_double_space_linebreaks = "forbid"
doc_include_without_cfg = "forbid"
doc_lazy_continuation = "forbid"
doc_link_code = "forbid"
doc_link_with_quotes = "forbid"
doc_markdown = "forbid"
doc_nested_refdefs = "forbid"
doc_overindented_list_items = "forbid"
doc_suspicious_footnotes = "forbid"
double_comparisons = "forbid"
double_ended_iterator_last = "forbid"
double_must_use = "forbid"
double_parens = "forbid"
drain_collect = "forbid"
drop_non_drop = "forbid"
duplicate_mod = "forbid"
duplicate_underscore_argument = "forbid"
duplicated_attributes = "forbid"
duration_subsec = "forbid"
eager_transmute = "forbid"
elidable_lifetime_names = "forbid"
empty_docs = "forbid"
empty_drop = "forbid"
empty_enum_variants_with_brackets = "forbid"
empty_enums = "forbid"
empty_line_after_doc_comments = "forbid"
empty_line_after_outer_attr = "forbid"
empty_loop = "forbid"
empty_structs_with_brackets = "forbid"
enum_clike_unportable_variant = "forbid"
enum_glob_use = "forbid"
enum_variant_names = "forbid"
eq_op = "forbid"
equatable_if_let = "forbid"
erasing_op = "forbid"
err_expect = "forbid"
error_impl_error = "forbid"
excessive_nesting = "forbid"
excessive_precision = "forbid"
exit = "forbid"
expect_fun_call = "forbid"
expect_used = "forbid"
expl_impl_clone_on_copy = "forbid"
explicit_auto_deref = "forbid"
explicit_counter_loop = "forbid"
explicit_deref_methods = "forbid"
explicit_into_iter_loop = "forbid"
explicit_iter_loop = "forbid"
explicit_write = "forbid"
extend_with_drain = "forbid"
extra_unused_lifetimes = "forbid"
extra_unused_type_parameters = "forbid"
fallible_impl_from = "forbid"
field_reassign_with_default = "forbid"
field_scoped_visibility_modifiers = "forbid"
filetype_is_file = "forbid"
filter_map_bool_then = "forbid"
filter_map_identity = "forbid"
filter_map_next = "forbid"
filter_next = "forbid"
flat_map_identity = "forbid"
flat_map_option = "forbid"
float_cmp = "forbid"
float_cmp_const = "forbid"
float_equality_without_abs = "forbid"
fn_params_excessive_bools = "forbid"
fn_to_numeric_cast = "forbid"
fn_to_numeric_cast_any = "forbid"
fn_to_numeric_cast_with_truncation = "forbid"
for_kv_map = "forbid"
forget_non_drop = "forbid"
format_collect = "forbid"
format_in_format_args = "forbid"
format_push_string = "forbid"
four_forward_slashes = "forbid"
from_iter_instead_of_collect = "forbid"
from_over_into = "forbid"
from_raw_with_void_ptr = "forbid"
future_not_send = "forbid"
get_first = "forbid"
get_last_with_len = "forbid"
get_unwrap = "forbid"
identity_op = "forbid"
if_let_mutex = "forbid"
if_not_else = "forbid"
if_same_then_else = "forbid"
if_then_some_else_none = "forbid"
ifs_same_cond = "forbid"
ignore_without_reason = "forbid"
ignored_unit_patterns = "forbid"
impl_hash_borrow_with_str_and_bytes = "forbid"
impl_trait_in_params = "forbid"
implicit_clone = "forbid"
implicit_hasher = "forbid"
implicit_saturating_add = "forbid"
implicit_saturating_sub = "forbid"
implied_bounds_in_impls = "forbid"
impossible_comparisons = "forbid"
imprecise_flops = "forbid"
incompatible_msrv = "forbid"
inconsistent_digit_grouping = "forbid"
inconsistent_struct_constructor = "forbid"
index_refutable_slice = "forbid"
indexing_slicing = "forbid"
ineffective_bit_mask = "forbid"
ineffective_open_options = "forbid"
inefficient_to_string = "forbid"
infallible_destructuring_match = "forbid"
infallible_try_from = "forbid"
infinite_iter = "forbid"
infinite_loop = "forbid"
inherent_to_string = "forbid"
inherent_to_string_shadow_display = "forbid"
init_numbered_fields = "forbid"
inline_always = "forbid"
inline_fn_without_body = "forbid"
inspect_for_each = "forbid"
int_plus_one = "forbid"
integer_division_remainder_used = "deny"
into_iter_on_ref = "forbid"
into_iter_without_iter = "forbid"
invalid_regex = "forbid"
invalid_upcast_comparisons = "forbid"
inverted_saturating_sub = "forbid"
invisible_characters = "forbid"
io_other_error = "forbid"
ip_constant = "forbid"
is_digit_ascii_radix = "forbid"
items_after_statements = "forbid"
items_after_test_module = "forbid"
iter_cloned_collect = "forbid"
iter_count = "forbid"
iter_filter_is_ok = "forbid"
iter_filter_is_some = "forbid"
iter_kv_map = "forbid"
iter_next_loop = "forbid"
iter_next_slice = "forbid"
iter_not_returning_iterator = "forbid"
iter_nth = "forbid"
iter_nth_zero = "forbid"
iter_on_empty_collections = "forbid"
iter_on_single_items = "forbid"
iter_out_of_bounds = "forbid"
iter_over_hash_type = "forbid"
iter_overeager_cloned = "forbid"
iter_skip_next = "forbid"
iter_skip_zero = "forbid"
iter_with_drain = "forbid"
iter_without_into_iter = "forbid"
iterator_step_by_zero = "forbid"
join_absolute_paths = "forbid"
just_underscores_and_digits = "forbid"
large_const_arrays = "forbid"
large_digit_groups = "forbid"
large_enum_variant = "forbid"
large_futures = "forbid"
large_include_file = "forbid"
large_stack_arrays = "forbid"
large_stack_frames = "forbid"
large_types_passed_by_value = "forbid"
legacy_numeric_constants = "forbid"
len_without_is_empty = "forbid"
len_zero = "forbid"
let_and_return = "forbid"
let_underscore_future = "forbid"
let_underscore_lock = "forbid"
let_underscore_must_use = "forbid"
let_unit_value = "forbid"
let_with_type_underscore = "forbid"
lines_filter_map_ok = "forbid"
linkedlist = "forbid"
lint_groups_priority = "forbid"
literal_string_with_formatting_args = "forbid"
lossy_float_literal = "forbid"
macro_metavars_in_unsafe = "forbid"
macro_use_imports = "forbid"
main_recursion = "forbid"
manual_abs_diff = "forbid"
manual_assert = "forbid"
manual_async_fn = "forbid"
manual_bits = "forbid"
manual_c_str_literals = "forbid"
manual_clamp = "forbid"
manual_contains = "forbid"
manual_dangling_ptr = "forbid"
manual_div_ceil = "forbid"
manual_filter = "forbid"
manual_filter_map = "forbid"
manual_find = "forbid"
manual_find_map = "forbid"
manual_flatten = "forbid"
manual_hash_one = "forbid"
manual_ignore_case_cmp = "forbid"
manual_inspect = "forbid"
manual_instant_elapsed = "forbid"
manual_is_ascii_check = "forbid"
manual_is_finite = "forbid"
manual_is_infinite = "forbid"
manual_is_multiple_of = "forbid"
manual_is_power_of_two = "forbid"
manual_is_variant_and = "forbid"
manual_let_else = "forbid"
manual_main_separator_str = "forbid"
manual_map = "forbid"
manual_memcpy = "forbid"
manual_midpoint = "forbid"
manual_next_back = "forbid"
manual_non_exhaustive = "forbid"
manual_ok_err = "forbid"
manual_ok_or = "forbid"
manual_option_as_slice = "forbid"
manual_pattern_char_comparison = "forbid"
manual_range_contains = "forbid"
manual_range_patterns = "forbid"
manual_rem_euclid = "forbid"
manual_repeat_n = "forbid"
manual_retain = "forbid"
manual_rotate = "forbid"
manual_saturating_arithmetic = "forbid"
manual_slice_fill = "forbid"
manual_slice_size_calculation = "forbid"
manual_split_once = "forbid"
manual_str_repeat = "forbid"
manual_string_new = "forbid"
manual_strip = "forbid"
manual_swap = "forbid"
manual_try_fold = "forbid"
manual_unwrap_or = "forbid"
manual_unwrap_or_default = "forbid"
manual_while_let_some = "forbid"
many_single_char_names = "forbid"
map_all_any_identity = "forbid"
map_clone = "forbid"
map_collect_result_unit = "forbid"
map_entry = "forbid"
map_err_ignore = "forbid"
map_flatten = "forbid"
map_identity = "forbid"
map_unwrap_or = "forbid"
map_with_unused_argument_over_ranges = "forbid"
match_as_ref = "forbid"
match_bool = "forbid"
match_like_matches_macro = "forbid"
match_overlapping_arm = "forbid"
match_ref_pats = "forbid"
match_result_ok = "forbid"
match_same_arms = "forbid"
match_single_binding = "forbid"
match_str_case_mismatch = "forbid"
match_wild_err_arm = "forbid"
match_wildcard_for_single_variants = "forbid"
maybe_infinite_iter = "forbid"
mem_forget = "forbid"
mem_replace_option_with_none = "forbid"
mem_replace_option_with_some = "forbid"
mem_replace_with_default = "forbid"
mem_replace_with_uninit = "forbid"
min_max = "forbid"
mismatching_type_param_order = "forbid"
misnamed_getters = "forbid"
misrefactored_assign_op = "forbid"
missing_assert_message = "forbid"
missing_asserts_for_indexing = "forbid"
missing_const_for_fn = "forbid"
missing_const_for_thread_local = "forbid"
missing_docs_in_private_items = "forbid"
missing_enforced_import_renames = "forbid"
missing_errors_doc = "forbid"
missing_fields_in_debug = "forbid"
missing_panics_doc = "forbid"
missing_safety_doc = "forbid"
missing_spin_loop = "forbid"
missing_trait_methods = "deny"
missing_transmute_annotations = "forbid"
mistyped_literal_suffixes = "forbid"
mixed_attributes_style = "forbid"
mixed_case_hex_literals = "forbid"
mixed_read_write_in_expression = "forbid"
module_inception = "forbid"
module_name_repetitions = "forbid"
modulo_arithmetic = "forbid"
modulo_one = "forbid"
multi_assignments = "forbid"
multiple_bound_locations = "forbid"
multiple_crate_versions = "allow"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "forbid"
must_use_candidate = "forbid"
must_use_unit = "forbid"
mut_from_ref = "forbid"
mut_mut = "forbid"
mut_mutex_lock = "forbid"
mut_range_bound = "forbid"
mutable_key_type = "forbid"
mutex_atomic = "forbid"
mutex_integer = "forbid"
naive_bytecount = "forbid"
needless_arbitrary_self_type = "forbid"
needless_as_bytes = "forbid"
needless_bitwise_bool = "forbid"
needless_bool = "forbid"
needless_bool_assign = "forbid"
needless_borrow = "forbid"
needless_borrowed_reference = "forbid"
needless_borrows_for_generic_args = "forbid"
needless_character_iteration = "forbid"
needless_collect = "forbid"
needless_continue = "forbid"
needless_doctest_main = "forbid"
needless_else = "forbid"
needless_for_each = "forbid"
needless_ifs = "forbid"
needless_late_init = "forbid"
needless_lifetimes = "forbid"
needless_match = "forbid"
needless_maybe_sized = "forbid"
needless_option_as_deref = "forbid"
needless_option_take = "forbid"
needless_parens_on_range_literals = "forbid"
needless_pass_by_ref_mut = "forbid"
needless_pass_by_value = "forbid"
needless_pub_self = "forbid"
needless_question_mark = "forbid"
needless_range_loop = "forbid"
needless_raw_string_hashes = "forbid"
needless_raw_strings = "forbid"
needless_return = "forbid"
needless_return_with_question_mark = "forbid"
needless_splitn = "forbid"
needless_update = "forbid"
neg_cmp_op_on_partial_ord = "forbid"
neg_multiply = "forbid"
negative_feature_names = "forbid"
never_loop = "forbid"
new_ret_no_self = "forbid"
new_without_default = "forbid"
no_effect = "forbid"
no_effect_replace = "forbid"
no_effect_underscore_binding = "forbid"
no_mangle_with_rust_abi = "forbid"
non_canonical_clone_impl = "forbid"
non_canonical_partial_ord_impl = "forbid"
non_minimal_cfg = "forbid"
non_octal_unix_permissions = "forbid"
non_send_fields_in_send_ty = "forbid"
non_std_lazy_statics = "forbid"
non_zero_suggestions = "forbid"
nonminimal_bool = "forbid"
nonsensical_open_options = "forbid"
nonstandard_macro_braces = "forbid"
not_unsafe_ptr_arg_deref = "forbid"
obfuscated_if_else = "forbid"
octal_escapes = "forbid"
ok_expect = "forbid"
only_used_in_recursion = "forbid"
op_ref = "forbid"
option_as_ref_cloned = "forbid"
option_as_ref_deref = "forbid"
option_env_unwrap = "forbid"
option_filter_map = "forbid"
option_if_let_else = "forbid"
option_map_or_none = "forbid"
option_map_unit_fn = "forbid"
option_option = "forbid"
or_fun_call = "forbid"
or_then_unwrap = "forbid"
out_of_bounds_indexing = "forbid"
overly_complex_bool_expr = "forbid"
owned_cow = "forbid"
panic = "deny"
panic_in_result_fn = "forbid"
panicking_overflow_checks = "forbid"
panicking_unwrap = "forbid"
partial_pub_fields = "forbid"
partialeq_ne_impl = "forbid"
partialeq_to_none = "forbid"
path_buf_push_overwrite = "forbid"
path_ends_with_ext = "forbid"
pathbuf_init_then_push = "forbid"
permissions_set_readonly_false = "forbid"
pointer_format = "forbid"
pointers_in_nomem_asm_block = "forbid"
possible_missing_comma = "forbid"
possible_missing_else = "forbid"
precedence = "forbid"
precedence_bits = "forbid"
print_in_format_impl = "forbid"
print_literal = "forbid"
print_stderr = "forbid"
print_stdout = "forbid"
print_with_newline = "forbid"
println_empty_string = "forbid"
ptr_arg = "forbid"
ptr_as_ptr = "forbid"
ptr_cast_constness = "forbid"
ptr_eq = "forbid"
ptr_offset_with_cast = "forbid"
pub_underscore_fields = "forbid"
pub_use = "forbid"
question_mark = "forbid"
range_minus_one = "forbid"
range_plus_one = "forbid"
range_zip_with_len = "forbid"
rc_buffer = "forbid"
rc_clone_in_vec_init = "forbid"
rc_mutex = "forbid"
read_line_without_trim = "forbid"
read_zero_byte_vec = "forbid"
readonly_write_lock = "forbid"
recursive_format_impl = "forbid"
redundant_allocation = "forbid"
redundant_as_str = "forbid"
redundant_async_block = "forbid"
redundant_at_rest_pattern = "forbid"
redundant_clone = "forbid"
redundant_closure = "forbid"
redundant_closure_call = "forbid"
redundant_closure_for_method_calls = "forbid"
redundant_comparisons = "forbid"
redundant_else = "forbid"
redundant_feature_names = "forbid"
redundant_field_names = "forbid"
redundant_guards = "forbid"
redundant_iter_cloned = "forbid"
redundant_locals = "forbid"
redundant_pattern = "forbid"
redundant_pattern_matching = "forbid"
redundant_slicing = "forbid"
redundant_static_lifetimes = "forbid"
redundant_test_prefix = "forbid"
redundant_type_annotations = "forbid"
ref_as_ptr = "forbid"
ref_binding_to_reference = "forbid"
ref_option = "forbid"
ref_option_ref = "forbid"
regex_creation_in_loops = "forbid"
renamed_function_params = "forbid"
repeat_once = "forbid"
repeat_vec_with_capacity = "forbid"
replace_box = "forbid"
repr_packed_without_abi = "forbid"
reserve_after_initialization = "forbid"
rest_pat_in_fully_bound_structs = "forbid"
result_filter_map = "forbid"
result_large_err = "forbid"
result_map_or_into_option = "forbid"
result_map_unit_fn = "forbid"
result_unit_err = "forbid"
return_and_then = "forbid"
return_self_not_must_use = "forbid"
reversed_empty_ranges = "forbid"
same_functions_in_if_condition = "forbid"
same_item_push = "forbid"
same_name_method = "forbid"
search_is_some = "forbid"
seek_from_current = "forbid"
seek_to_start_instead_of_rewind = "forbid"
self_assignment = "forbid"
self_named_constructors = "forbid"
self_only_used_in_recursion = "forbid"
semicolon_if_nothing_returned = "forbid"
serde_api_misuse = "forbid"
set_contains_or_insert = "forbid"
shadow_unrelated = "forbid"
short_circuit_statement = "forbid"
should_implement_trait = "forbid"
should_panic_without_expect = "forbid"
significant_drop_in_scrutinee = "forbid"
significant_drop_tightening = "forbid"
similar_names = "forbid"
single_char_add_str = "forbid"
single_char_lifetime_names = "forbid"
single_char_pattern = "forbid"
single_component_path_imports = "forbid"
single_element_loop = "forbid"
single_match = "forbid"
single_match_else = "forbid"
single_option_map = "forbid"
single_range_in_vec_init = "forbid"
size_of_in_element_count = "forbid"
size_of_ref = "forbid"
skip_while_next = "forbid"
sliced_string_as_bytes = "forbid"
slow_vector_initialization = "forbid"
stable_sort_primitive = "forbid"
str_split_at_newline = "forbid"
string_add = "forbid"
string_add_assign = "forbid"
string_extend_chars = "forbid"
string_lit_as_bytes = "forbid"
string_lit_chars_any = "forbid"
string_slice = "forbid"
strlen_on_c_strings = "forbid"
struct_excessive_bools = "forbid"
struct_field_names = "forbid"
suboptimal_flops = "forbid"
suspicious_arithmetic_impl = "forbid"
suspicious_assignment_formatting = "forbid"
suspicious_command_arg_space = "forbid"
suspicious_doc_comments = "forbid"
suspicious_else_formatting = "forbid"
suspicious_map = "forbid"
suspicious_op_assign_impl = "forbid"
suspicious_open_options = "forbid"
suspicious_operation_groupings = "forbid"
suspicious_splitn = "forbid"
suspicious_to_owned = "forbid"
suspicious_unary_op_formatting = "forbid"
suspicious_xor_used_as_pow = "forbid"
swap_ptr_to_ref = "forbid"
swap_with_temporary = "forbid"
tabs_in_doc_comments = "forbid"
temporary_assignment = "forbid"
test_attr_in_doctest = "forbid"
tests_outside_test_module = "forbid"
to_digit_is_some = "forbid"
to_string_in_format_args = "forbid"
to_string_trait_impl = "forbid"
todo = "forbid"
too_long_first_doc_paragraph = "forbid"
too_many_arguments = "forbid"
toplevel_ref_arg = "forbid"
trailing_empty_array = "forbid"
trait_duplication_in_bounds = "forbid"
transmute_bytes_to_str = "forbid"
transmute_int_to_bool = "forbid"
transmute_int_to_non_zero = "forbid"
transmute_null_to_fn = "forbid"
transmute_ptr_to_ptr = "forbid"
transmute_ptr_to_ref = "forbid"
transmute_undefined_repr = "forbid"
transmutes_expressible_as_ptr_casts = "forbid"
transmuting_null = "forbid"
trim_split_whitespace = "forbid"
trivial_regex = "forbid"
trivially_copy_pass_by_ref = "forbid"
try_err = "forbid"
tuple_array_conversions = "forbid"
type_complexity = "forbid"
type_id_on_box = "forbid"
type_repetition_in_bounds = "forbid"
unbuffered_bytes = "forbid"
unchecked_time_subtraction = "forbid"
unconditional_recursion = "forbid"
undocumented_unsafe_blocks = "forbid"
unicode_not_nfc = "forbid"
unimplemented = "forbid"
uninhabited_references = "forbid"
uninit_assumed_init = "forbid"
uninit_vec = "forbid"
uninlined_format_args = "forbid"
unit_arg = "forbid"
unit_cmp = "forbid"
unit_hash = "forbid"
unit_return_expecting_ord = "forbid"
unnecessary_box_returns = "forbid"
unnecessary_cast = "forbid"
unnecessary_clippy_cfg = "forbid"
unnecessary_debug_formatting = "forbid"
unnecessary_fallible_conversions = "forbid"
unnecessary_filter_map = "forbid"
unnecessary_find_map = "forbid"
unnecessary_first_then_check = "forbid"
unnecessary_fold = "forbid"
unnecessary_get_then_check = "forbid"
unnecessary_join = "forbid"
unnecessary_lazy_evaluations = "forbid"
unnecessary_literal_bound = "forbid"
unnecessary_literal_unwrap = "forbid"
unnecessary_map_on_constructor = "forbid"
unnecessary_map_or = "forbid"
unnecessary_min_or_max = "forbid"
unnecessary_mut_passed = "forbid"
unnecessary_operation = "forbid"
unnecessary_option_map_or_else = "forbid"
unnecessary_owned_empty_strings = "forbid"
unnecessary_result_map_or_else = "forbid"
unnecessary_safety_comment = "forbid"
unnecessary_safety_doc = "forbid"
unnecessary_self_imports = "forbid"
unnecessary_semicolon = "forbid"
unnecessary_sort_by = "forbid"
unnecessary_struct_initialization = "forbid"
unnecessary_to_owned = "forbid"
unnecessary_unwrap = "forbid"
unnecessary_wraps = "forbid"
unneeded_field_pattern = "forbid"
unneeded_struct_pattern = "forbid"
unneeded_wildcard_pattern = "forbid"
unnested_or_patterns = "forbid"
unreachable = "forbid"
unreadable_literal = "forbid"
unsafe_derive_deserialize = "forbid"
unsafe_removed_from_name = "forbid"
unsound_collection_transmute = "forbid"
unused_async = "forbid"
unused_enumerate_index = "forbid"
unused_format_specs = "forbid"
unused_io_amount = "forbid"
unused_peekable = "forbid"
unused_result_ok = "forbid"
unused_rounding = "forbid"
unused_self = "forbid"
unused_trait_names = "forbid"
unused_unit = "forbid"
unusual_byte_groupings = "forbid"
unwrap_in_result = "forbid"
unwrap_or_default = "forbid"
unwrap_used = "forbid"
upper_case_acronyms = "forbid"
use_debug = "forbid"
use_self = "forbid"
used_underscore_binding = "forbid"
used_underscore_items = "forbid"
useless_asref = "forbid"
useless_attribute = "deny"
useless_concat = "forbid"
useless_conversion = "forbid"
useless_format = "forbid"
useless_let_if_seq = "forbid"
useless_nonzero_new_unchecked = "forbid"
useless_transmute = "forbid"
useless_vec = "forbid"
vec_box = "forbid"
vec_init_then_push = "forbid"
vec_resize_to_zero = "forbid"
verbose_bit_mask = "forbid"
verbose_file_reads = "forbid"
volatile_composites = "forbid"
waker_clone_wake = "forbid"
while_float = "forbid"
while_immutable_condition = "forbid"
while_let_loop = "forbid"
while_let_on_iterator = "forbid"
wildcard_dependencies = "forbid"
wildcard_enum_match_arm = "forbid"
wildcard_imports = "forbid"
wildcard_in_or_patterns = "forbid"
write_literal = "forbid"
write_with_newline = "forbid"
writeln_empty_string = "forbid"
wrong_self_convention = "forbid"
wrong_transmute = "forbid"
zero_divided_by_zero = "forbid"
zero_prefixed_literal = "forbid"
zero_ptr = "forbid"
zero_repeat_side_effects = "forbid"
zero_sized_map_values = "forbid"
zombie_processes = "forbid"
zst_offset = "forbid"

[package]
name = "tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cp-base.workspace = true
cp-render = { path = "crates/cp-render" }
log = "0.4"
cp-mod-console = { path = "crates/cp-mod-console" }
cp-mod-callback = { path = "crates/cp-mod-callback" }
cp-mod-scratchpad = { path = "crates/cp-mod-scratchpad" }
cp-mod-todo = { path = "crates/cp-mod-todo" }
cp-mod-memory = { path = "crates/cp-mod-memory" }
cp-mod-tree = { path = "crates/cp-mod-tree" }
cp-mod-git = { path = "crates/cp-mod-git" }
cp-mod-logs = { path = "crates/cp-mod-logs" }
cp-mod-github = { path = "crates/cp-mod-github" }
cp-mod-files = { path = "crates/cp-mod-files" }
cp-mod-spine = { path = "crates/cp-mod-spine" }
cp-mod-preset = { path = "crates/cp-mod-preset" }
cp-mod-prompt = { path = "crates/cp-mod-prompt" }
cp-mod-typst = { path = "crates/cp-mod-typst" }
cp-mod-brave = { path = "crates/cp-mod-brave" }
cp-mod-firecrawl = { path = "crates/cp-mod-firecrawl" }
cp-mod-queue = { path = "crates/cp-mod-queue" }
cp-mod-chat = { path = "crates/cp-mod-chat" }
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
unicode-width.workspace = true
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
secrecy = { version = "0.10", features = ["serde"] }
notify = "6.1"

[lints]
workspace = true
