[package]
name = "cp-console-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Console server daemon — manages child processes for Context Pilot"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "cp-console-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nix = { version = "0.30", default-features = false, features = ["process"] }
signal-hook = "0.3"

[lints]
workspace = true
