[package]
name = "cp-mod-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chat module — Matrix-based universal messaging layer for Context Pilot"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
cp-mod-spine = { path = "../cp-mod-spine" }
serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
log = "0.4"
chrono = "0.4"
matrix-sdk = { version = "0.16", features = ["sqlite", "bundled-sqlite", "markdown"] }
mime = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
url = "2"

[lints]
workspace = true
