[package]
name = "cp-mod-firecrawl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
crossterm.workspace = true
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
