[package]
name = "cp-mod-github"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
crossterm.workspace = true
regex.workspace = true
sha2.workspace = true
serde_json.workspace = true
secrecy = { version = "0.10", features = ["serde"] }

[lints]
workspace = true
