[package]
name = "cp-mod-preset"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render = { path = "../cp-render" }
cp-mod-prompt = { path = "../cp-mod-prompt" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
