[package]
name = "cp-mod-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
cp-mod-files = { path = "../cp-mod-files" }
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
