[package]
name = "cp-mod-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
ignore.workspace = true
sha2.workspace = true

[lints]
workspace = true
