[package]
name = "cp-mod-typst"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render = { path = "../cp-render" }
cp-mod-callback = { path = "../cp-mod-callback" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
typst = "0.13"
typst-pdf = "0.13"
reqwest = { workspace = true }
flate2 = "1"
tar = "0.4"

[lints]
workspace = true
